@@ -6,6 +6,7 @@
 * Add - New wcs_get_orders_with_meta_query() helper function to query for orders and subscriptions.
 * Update - Replace instances of `get_posts()` across codebase with new wcs_get_orders_with_meta_query() function.
 * Dev - Code that was tagged with a version and moved from WooCommerce Subscriptions now explicitly mentions this and shows the correct subscriptions-core and WC Subscriptions versions.
+* Dev - Refactor the saving of subscription dates in the subscription datastore to separate fetching changes and saving. Enables backfilling subscription dates when HPOS syncing is enabled.
 
 = 2.5.1 - 2022-11-04 =
 * Dev - Replace the use of the deprecated wcs_renewal_order_meta hook with wc_subscription_renewal_order_data in the WCS_Related_Order_Store_Cached_CPT class.
